SQOOP-2501: Sqoop2: Findbugs: Fix smaller-ish warnings in common-test module
(Colin Ma via Jarek Jarcec Cecho)